--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,6 +31,6 @@
             <button id="animateBtn">Presioname!</button>
         </div>
     </div>
-    <script src="index.js"></script> 
+    <script src="index.js"></script>
 </body>
 </html>
