--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La distancia solo es un Sustantivo </title>
+    <title>La distancia solo es un Sustantivo</title>
     <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
@@ -31,6 +31,11 @@
             <button id="animateBtn">Presioname!</button>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script>
+        document.getElementById("animateBtn").addEventListener("click", function() {
+            window.location.href = "https://www.youtube.com/watch?v=hl3c6j0mwNc"; // Reemplaza con el enlace deseado
+        });
+    </script>
 </body>
 </html>
+
